@@ -1,15 +1,15 @@
 <property_sheet_list>
  <portal_type id="Cash Balance Regulation">
-  <item>Price</item>
   <item>Resource</item>
   <item>Amount</item>
+  <item>Price</item>
   <item>Simulation</item>
  </portal_type>
  <portal_type id="Cash Exchange">
-  <item>Simulation</item>
   <item>Price</item>
-  <item>Amount</item>
+  <item>Simulation</item>
   <item>Resource</item>
+  <item>Amount</item>
  </portal_type>
  <portal_type id="Cash Movement">
   <item>Price</item>
@@ -18,17 +18,17 @@
   <item>Price</item>
  </portal_type>
  <portal_type id="Cash To Currency Purchase">
-  <item>Price</item>
-  <item>Resource</item>
   <item>Discount</item>
+  <item>Resource</item>
+  <item>Price</item>
   <item>Reference</item>
   <item>Amount</item>
  </portal_type>
  <portal_type id="Cash To Currency Sale">
-  <item>Discount</item>
-  <item>Reference</item>
   <item>Amount</item>
   <item>Price</item>
+  <item>Reference</item>
+  <item>Discount</item>
   <item>Resource</item>
  </portal_type>
  <portal_type id="Container Cell">
@@ -41,22 +41,15 @@
   <item>Amount</item>
   <item>Price</item>
  </portal_type>
- <portal_type id="Currency Purchase">
-  <item>Reference</item>
-  <item>Price</item>
-  <item>Discount</item>
-  <item>Resource</item>
-  <item>ItemAggregation</item>
- </portal_type>
  <portal_type id="Currency Sale">
-  <item>Reference</item>
   <item>Price</item>
   <item>Discount</item>
   <item>Resource</item>
+  <item>Reference</item>
  </portal_type>
  <portal_type id="Destruction Survey">
-  <item>Amount</item>
   <item>Task</item>
+  <item>Amount</item>
  </portal_type>
  <portal_type id="Exchanged Mutilated Banknote Line">
   <item>CashDeliveryLine</item>
@@ -83,16 +76,16 @@
   <item>CashDeliveryLine</item>
  </portal_type>
  <portal_type id="Internal Money Deposit">
-  <item>InternalMoney</item>
   <item>Arrow</item>
   <item>Task</item>
   <item>Price</item>
+  <item>InternalMoney</item>
  </portal_type>
  <portal_type id="Monetary Destruction">
-  <item>Price</item>
-  <item>Account</item>
-  <item>Task</item>
   <item>Amount</item>
+  <item>Account</item>
+  <item>Price</item>
+  <item>Task</item>
  </portal_type>
  <portal_type id="Monetary Issue">
   <item>Price</item>
@@ -112,18 +105,18 @@
   <item>CashDeliveryLine</item>
  </portal_type>
  <portal_type id="Monetary Reception">
-  <item>Comment</item>
   <item>CashContainer</item>
+  <item>Comment</item>
  </portal_type>
  <portal_type id="Monetary Survey">
-  <item>Amount</item>
   <item>Task</item>
+  <item>Amount</item>
  </portal_type>
  <portal_type id="Money Deposit">
   <item>Arrow</item>
   <item>Task</item>
-  <item>ItemAggregation</item>
   <item>Price</item>
+  <item>ItemAggregation</item>
  </portal_type>
  <portal_type id="Money Deposit Rendering">
   <item>Price</item>
@@ -165,8 +158,8 @@
   <item>Amount</item>
  </portal_type>
  <portal_type id="Usual Cash Transfer">
-  <item>Amount</item>
   <item>Price</item>
+  <item>Amount</item>
  </portal_type>
  <portal_type id="Vault Transfer">
   <item>Amount</item>
