@@ -1,3 +1,4 @@
+
 Cash Balance Regulation Module | Cash Balance Regulation
 Cash Balance Regulation | Incoming Cash Balance Regulation Line
 Cash Balance Regulation | Outgoing Cash Balance Regulation Line
@@ -23,9 +24,6 @@ Classification Survey | Outgoing Classification Survey Line
 Container Line | Container Cell
 Counter Rendering Module | Counter Rendering
 Counter Rendering | Cash Delivery Line
-Currency Purchase Module | Currency Purchase
-Currency Purchase | Banking Operation Line
-Currency Purchase | Cash Delivery Line
 Currency Sale Module | Currency Sale
 Currency Sale | Banking Operation Line
 Currency Sale | Cash Delivery Line
