@@ -1,3 +1,4 @@
+
 Bank Account | site
 Cash Container Item | aggregate
 Cash To Currency Purchase | currency_exchange_type
@@ -8,8 +9,6 @@ Container Cell | variation
 Container Line | cash_status
 Container Line | emission_letter
 Container Line | variation
-Currency Purchase | currency_exchange_type
-Currency Purchase | source_trade
 Currency Sale | currency_exchange_type
 Currency Sale | source_trade
 Foreign Cash Reception | currency_exchange_type
