@@ -1,3 +1,4 @@
+
 Cash Balance Regulation
 Cash Balance Regulation Module
 Cash Container
@@ -18,8 +19,6 @@ Container Cell
 Container Line
 Counter Rendering
 Counter Rendering Module
-Currency Purchase
-Currency Purchase Module
 Currency Sale
 Currency Sale Module
 Destruction Survey
