@@ -1,3 +1,6 @@
+2006-07-09 aurel
+* remove curreny purchase as no more enougth generic
+
 2006-07-03 aurel
 * remove incident module as it is not enougth generic
 
